Changed the font of the display

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="calculator">
-        <div id="display"> <h1> 0 </h1></div>
+        <div id="display"> <h4> 0 </h4git></div>
         <div class="operators">
             <button class="keyOperators"> + </button>
             <button class="keyOperators"> - </button>
